# HedisToys

./: HedisTest.cabal  HedisToys.cabal  LICENSE  Makefile  README.md  redis.conf
src/: HedisTest.hs  HedisToys.hs
