Name:                HedisToys
Version:             0.4
Synopsis:            A playground for experimenting the hedis package.
Description:         HedisToys is just a simple executable for experimenting with the hedis package.
Homepage:            https://github.com/quixoftic/HedisToys
License:             BSD3
License-file:        LICENSE
Author:              Drew Hess <dhess-src@quixoftic.com>
Maintainer:          Drew Hess <dhess-src@quixoftic.com>
Copyright:           Copyright © 2012, Quixoftic, LLC <src@quixoftic.com>
Category:            Database
Build-type:          Simple
Cabal-version:       >=1.6

source-repository head
  type:     git
  location: https://github.com/quixoftic/HedisToys.git

Executable hedistoys
           Hs-Source-Dirs:      src
           Main-Is:             HedisToys.hs
           Build-Depends:       hedis == 0.6,
                                text,
                                base >= 4.5.0.0 && < 5,
                                bytestring,
                                cmdargs >= 0.10 && < 0.11,
                                network,
                                transformers
